trunk/NewArchive/8f398f3ce2e5dd9c633812f1d27be515-ad3febf7a884bab73e56b6ba60c751d7/output
+ g++-4.8 -std=c++11 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘call_helper<decltype (f(declval<T>()))> call_helper<T>::then(F&&)’:
main.cpp:40:71: error: expected ‘)’ before ‘;’ token
         return call(std::forward<F>(std::forward<F>(f), future_.get());
                                                                       ^
main.cpp: In member function ‘call_helper<decltype (f(declval<T>()))> call_helper<T>::then(F&&) [with F = __lambda4&; T = int; decltype (f(declval<T>())) = int]’:
main.cpp:41:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
